[tool.poetry]
name = "pymatris"
version = "0.0.0"
description = ""
authors = ["zhuolisam <zhuolisam0627@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
tqdm = "^4.66.2"
aiohttp = "^3.9.5"
aioftp = "^0.22.3"
aiofiles = "^23.2.1"
asyncssh = "^2.14.2"
pytest-sftpserver = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-localserver = "^0.8.1"
pytest-asyncio = "^0.23.6"
pytest-socket = "^0.7.0"
pytest-localftpserver = "^1.2.0"
pytest-env = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
