[tool.poetry]
name = "pymatris"
version = "0.0.4"
description = "Parallel download manager for HTTP/HTTPS/FTP/SFTP protocols."
authors = ["zhuolisam <zhuolisam0627@gmail.com>"]
readme = "README.md"
packages = [{ include = "pymatris" }]
keywords = ["downloader", "download-manager", "http/https", "sftp", "ftp"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
tqdm = "^4.66.2"
aiohttp = "^3.9.5"
aioftp = "^0.22.3"
aiofiles = "^23.2.1"
asyncssh = "^2.14.2"

[tool.poetry.urls]
"Homepage" = "https://github.com/zhuolisam/pymatris"
"Documentation" = "https://github.com/zhuolisam/pymatris"
"Source Code" = "https://github.com/zhuolisam/pymatris"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-localserver = "^0.8.1"
pytest-asyncio = "^0.23.6"
pytest-socket = "^0.7.0"
pytest-localftpserver = "^1.2.0"
pytest-sftpserver = "^1.3.0"
pytest-env = "^1.1.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pymatris = "pymatris.main:main"
